--- a/GameZone/GameZone/Views/_ViewImports.cshtml
+++ b/GameZone/GameZone/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using GameZone
 @using GameZone.Models
 @using GameZone.ViewModels
+@using DataAccessLayer.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
