--- a/GameZone/GameZone/Views/Games/Create.cshtml
+++ b/GameZone/GameZone/Views/Games/Create.cshtml
@@ -55,14 +55,6 @@
 </form>
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
-	<script>
-		$.validator.addMethod('filesize', function (value, element, param) {
-			return this.optional(element) || element.files[0].size <= param;
-		});
-		$(document).ready(function () {
-			$('#Cover').on('change', function () {
-				$('.cover-preview').attr('src', window.URL.createObjectURL(this.files[0])).removeClass('d-none');
-			});
-		});
-	</script>
+	<script src="~/js/file-size.js" asp-append-version="true"></script>
+	<script src="~/js/game-form.js" asp-append-version="true"></script>
 }
