--- a/GameZone/GameZone/Views/Home/Index.cshtml
+++ b/GameZone/GameZone/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
-﻿@{
+﻿
+@model IEnumerable<Game>
+
+
+@{
     ViewData["Title"] = "Home Page";
 }
+@if(!Model.Any())
+{
+    <div class="alert alert-warning mt-5">
+    <h4 class="alert-heading">No Games!</h4>
+    <p class="mb-0">No Games Were Added Yet.</p>
+    </div>
+}
+else
+{
+    <div class="row mt-5">
+        @foreach (var game in Model)
+        {
+            <div class="col-lg-4 col-md-6">
+               @*  <a class="card border-success mb-3 text-decoration-none rounded-3 overflow-hidden" asp-controller="Games" asp-action="Details" asp-route-id="@game.Id"> *@
+                    <div class="card-body" style="background-image: url(@($"/assets/images/Games/{game.CoverName}")); background-size: cover; background-position: center; height: 500px;">
+                        <div class="d-flex align-items-end h-100">
+                            <span class="badge bg-secondary rounded-0 fs-3">@game.Category?.Name</span>
+                        </div>
+                    </div>
+                    <div class="card-footer text-muted d-flex justify-content-between align-items-center">
+                        <h5>@game.Name</h5>
+                        <div>
+                            @foreach (var gameDevice in game.Devices)
+                            {
+                                <i class="@gameDevice.Device.Icon me-2 fs-4"></i>
+                            }
+                        </div>
+                    </div>
+               @*  </a> *@
+            </div>
+        }
+    </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+}
+
