--- a/GameZone/GameZone/Views/Games/Index.cshtml
+++ b/GameZone/GameZone/Views/Games/Index.cshtml
@@ -39,7 +39,7 @@ else
 								<a asp-action="Edit" class="btn btn-info rounded rounded-3 me-2" asp-route-id="@game.Id">
 									<i class="bi bi-pencil-fill"></i>
 								</a>
-								<a href="#" class="btn btn-danger rounded rounded-3">
+								<a href="javascript:;" class="btn btn-danger rounded rounded-3 js-delete" data-id="@game.Id">
 									<i class="bi bi-trash3"></i>
 								</a>
 							</div>
@@ -49,4 +49,9 @@ else
 			</tbody>
 		</table>
 	</div>
+}
+@section Scripts
+{
+	<script src="~/js/game-index.js" asp-append-version="true"></script>
+
 }
